update search bar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- end: logo -->
 
             <!-- start: search bar -->
-            <div class=" width-70 heigh-20">
+            <div class=" variable-width-tablet-phone heigh-20">
 
                 <div class="input-group flex-nowrap height-100p100">
                     <span class="input-group-text" id="addon-wrapping" style="background-color: var(--color-light-gray);">
@@ -53,13 +53,13 @@
             <!-- start: right icons -->
             <div class=" width-15 flex flex-dir-row align-it-center just-cont-around">
 
-                <a href="#">
+                <a class="disp-none-tablet-phone" href="#">
                     <i class="fa-solid fa-list-ul"></i>
                 </a>
-                <a href="#">
+                <a class="disp-none-tablet-phone" href="#">
                     <i class="fa-solid fa-circle-question"></i>
                 </a>
-                <a href="#">
+                <a class="disp-none-tablet-phone" href="#">
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </a>
                 
@@ -273,7 +273,6 @@
 
                             </div>
                             <!-- end: citta, stato, cap -->
-
 
                             <!-- start: foto -->
                             <div class=" padd-10 mb-3">
