update search bar

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <!-- end: search bar -->
 
             <!-- start: right icons -->
-            <div class=" width-15 flex flex-dir-row align-it-center just-cont-around">
+            <div class=" width-15 flex flex-dir-row align-it-center just-cont-evenly">
 
                 <a class="disp-none-tablet-phone" href="#">
                     <i class="fa-solid fa-list-ul"></i>
