--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                         <td>
 
                                             <div class="flex align-it-center">
-                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px;" src="./assets/img/spans.svg" alt="spans">
+                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px; vertical-align: middle;" src="./assets/img/spans.svg" alt="spans">
                                                 Classe 75
                                             </div>
                                         </td>
@@ -360,7 +360,7 @@
                                         <td>
 
                                             <div class="flex align-it-center">
-                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px;" src="./assets/img/spans.svg" alt="spans">
+                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px; vertical-align: middle;" src="./assets/img/spans.svg" alt="spans">
                                                 Classe 76
                                             </div>
                                         </td>
@@ -378,7 +378,7 @@
                                     <tr>
                                         <td>
                                             <div class="flex align-it-center">
-                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px;" src="./assets/img/spans.svg" alt="spans">
+                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px; vertical-align: middle;" src="./assets/img/spans.svg" alt="spans">
                                                 Classe 77
                                             </div>
                                         </td>
@@ -397,7 +397,7 @@
                                         <td>
 
                                             <div class="flex align-it-center">
-                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px;" src="./assets/img/spans.svg" alt="spans">
+                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px; vertical-align: middle;" src="./assets/img/spans.svg" alt="spans">
                                                 Classe 78
                                             </div>
                                         </td>
@@ -416,7 +416,7 @@
                                         <td>
 
                                             <div class="flex align-it-center">
-                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px;" src="./assets/img/spans.svg" alt="spans">
+                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px; vertical-align: middle;" src="./assets/img/spans.svg" alt="spans">
                                                 Classe 79
                                             </div>
                                         </td>
@@ -435,7 +435,7 @@
                                         <td>
 
                                             <div class="flex align-it-center">
-                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px;" src="./assets/img/spans.svg" alt="spans">
+                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px; vertical-align: middle;" src="./assets/img/spans.svg" alt="spans">
                                                 Classe 80
                                             </div>
                                         </td>
@@ -454,7 +454,7 @@
                                         <td>
 
                                             <div class="flex align-it-center">
-                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px;" src="./assets/img/spans.svg" alt="spans">
+                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px; vertical-align: middle;" src="./assets/img/spans.svg" alt="spans">
                                                 Classe 81
                                             </div>
                                         </td>
@@ -473,7 +473,7 @@
                                         <td>
 
                                             <div class="flex align-it-center">
-                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px;" src="./assets/img/spans.svg" alt="spans">
+                                                <img style="display: inline-block; height: 25px; width: 25px; border-radius: 100%; background-color: #F48070; padding: 5px; margin-right: 5px; vertical-align: middle;" src="./assets/img/spans.svg" alt="spans">
                                                 Classe 82
                                             </div>
                                         </td>
